# cap-example

./: .env.example  .gitignore  LICENSE  README.md  environment.cap-example-real.yml  pyproject.toml
.github/workflows/: ci.yml
config/: cap-example.example.toml
example_cap_server/: main.py  market_interpretation.py  runtime_config.py  toy_graph.py
example_cap_server/integrations/: __init__.py  abel_graph_computer_adapter.py  abel_graph_computer_cap_map.json
example_cap_server/market_pipeline/: __init__.py  analysis.py  graph_ops.py  models.py  parser.py  pipeline.py  postprocess.py  utils.py
reports/: cap_verb_suite_20260326T004647Z.json  cap_verb_suite_20260326T004647Z.md  cap_verb_suite_20260327T015747Z.json  cap_verb_suite_20260327T015747Z.md  cap_verb_suite_20260327T021226Z.json  cap_verb_suite_20260327T021226Z.md  cap_verb_suite_20260329T225414Z.json  cap_verb_suite_20260329T225414Z.md  cap_verb_suite_20260422T010616Z.json  cap_verb_suite_20260422T010616Z.md  cap_verb_suite_20260422T011348Z.json  cap_verb_suite_20260422T011348Z.md
scripts/: run_cap_verb_suite.py
tests/: test_app.py  test_runtime_config.py
